<resources>
    <string name="app_name">Game Vault</string>
    <string name="inicio">Comienza</string>
    <!--    Strings Login-->
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="noCuentaRegistrate">No tienes cuenta.</string>
    <string name="registrate">Regístrate</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="titulo">Game Vault</string>
    <string name="descripcion_imagen">Imagen del logo del proyecto</string>
    <string name="passwordForget">Olvidaste tu contraseña</string>
    <!--    Strings SignUp-->
    <string name="textButtonNext">Siguiente</string>
    <string name="textButtonBack">Volver</string>
    <string name="descripcionImagenArrowBack">Imagen de devolverse</string>
    <string name="nombres">Nombres</string>
    <string name="ingreseNombresApellidos">Ingrese su user name, sus nombres y apellidos</string>
    <string name="primerNombre">Primer Nombre</string>
    <string name="segundoNombre">Segundo Nombre (opcional)</string>
    <string name="primerApellido">Primer Apellido</string>
    <string name="segundoApellido">Segundo Apellido</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="correo">correo electrónico</string>
    <string name="ingreseCorreo">Ingrese su correo electrónico para recibir el código de confirmación</string>
    <string name="ingreseCorreoConfirmacion">Ingrese su correo electrónico para recibir el código de confirmación</string>
    <string name="verificaciónCorreo">Verificación del correo</string>
    <string name="ingreseCodigo">Ingrese el código que se le fue enviado al correo que proporciono</string>
    <string name="ingreseCodigoVerificación">Ingrese el código que se le fue enviado al correo que proporciono</string>
    <string name="valorVerificicacion">*</string>
    <string name="contraseñas">Contraseñas</string>
    <string name="nuevaContraseña">Nueva Contraseña</string>
    <string name="ingreseContraseña">Cree una contraseña y confirmela</string>
    <string name="ingreseNuevaContraseña">Ingrese la nueva contraseña y confirmela</string>
    <string name="ochoCaracteres">La contraseña debe ser minimo de 8 caracteres</string>
    <string name="nuevaOchoCaracteres">La nueva contraseña debe ser minimo de 8 caracteres</string>
    <string name="confirmarContraseña">Confirmar Contraseña</string>
    <!--    Strings KnowMore-->
    <string name="descripcionCuestionario">Completa el siguiente cuestionario para saber mas de ti</string>
    <string name="comenzar">Comenzar</string>
    <string name="escogerDesarrolladora">Escoge tus desarrolladoras</string>
    <string name="escogerDispositivos">Escoge tus dispositivos</string>
    <string name="escogeCategorias">Escoge tus categorias</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="search">Search</string>
    <string name="match">Match</string>
    <string name="explora">Explora</string>
    <string name="tituloJuego">Titulo</string>
    <string name="titulo_juego_detail">titulo juego detail</string>
    <string name="resumen_juego_detail">resumen juego detail</string>
    <string name="escoga_maximo_3">Escoga maximo 3</string>
    <string name="user_name">User Name</string>
    <string name="categoria">Categorias</string>
    <string name="home_icono">Home</string>
    <string name="agregar_icono">Agregar Catalogo</string>
    <string name="buscar_icono">Buscar</string>
    <string name="perfil_icono">Perfil</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="inicio_slude_bar">Inicio</string>
    <string name="categorias">Categorias</string>
    <string name="mis_juegos">Mis juegos</string>
    <string name="mis_catalogos">Mis catalogos</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="tus_catalogos">Tus Catalogos</string>
    <string name="tus_juegos">Tus Juegos</string>
    <string name="guardar_cambios">Guardar</string>
    <string name="juego">juego</string>
    <string name="titulo_catalogo">Titulo Catalogo</string>
    <string name="a_adir">Añadir juegos</string>
    <string name="crea_tu_catalogo">Crea Tu Catalogo</string>
    <string name="ingrese_el_juego">Ingrese las ids de los juegos que quiera separados por ","</string>
    <string name="catalogos_nombre">Catalogos Nombre</string>
    <string name="eliminar_cat_logo">Eliminar catálogo</string>
    <string name="editar_catalogo">Editar Catalogo</string>
    <string name="ingrese_el_id_del_juego">Ingrese el ID del juego</string>
    <string name="eliminar_juego">Eliminar Juego</string>
    <string name="agregar_juego">Agregar Juego</string>
    <string name="categoria_nombre">Categoria</string>
    <string name="crear">Crear</string>
    <string name="agregar">Agregar</string>
    <string name="seleccione_el_chechbox_para_eliminar_el_juego">Seleccione el chechbox para eliminar el juego</string>
    <string name="agregar___">Agregar</string>
    <string name="imagen_portada">Imagen portada</string>


</resources>