<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLogin"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">

        <Button
            android:id="@+id/buttonIniciarSesion"
            style="@style/EstiloBotonPrincipal"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="95sp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="95sp"
            android:text="@string/iniciarSesion"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/inter"
        android:text="@string/titulo"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/inputUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="235dp"
        android:layout_height="215dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descripcion_imagen"
        app:layout_constraintBottom_toTopOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/klipartz_com" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="14dp"
        android:autofillHints="username"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:paddingStart="25sp"
        android:paddingEnd="25sp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/inputPassword"
        android:background="@drawable/custom_input"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:paddingStart="25sp"
        android:paddingEnd="25sp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:hint="@string/contraseña"
        android:autofillHints="password"
        app:layout_constraintBottom_toTopOf="@+id/buttonIniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonIniciarSesion">

            <TextView
                android:id="@+id/conectSignUp"
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:text="@string/registrate"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintWidth_default="wrap"
                app:layout_constraintBottom_toBottomOf="@+id/textViewNoCuenta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewNoCuenta"
                app:layout_constraintTop_toTopOf="@+id/textViewNoCuenta"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewNoCuenta"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/inter"
                android:text="@string/noCuentaRegistrate"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/conectSignUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/passwordForgetText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/passwordForget"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>